[B] Correct contrast in BE reset PW interface
Resolves #2649

--- a/client/src/theme/styles/components/global/forms/_form-inputs-secondary.scss
+++ b/client/src/theme/styles/components/global/forms/_form-inputs-secondary.scss
@@ -218,6 +218,11 @@
     .button-secondary {
       display: inline-block;
       width: auto;
+
+      &.button-secondary--wide {
+        display: block;
+        width: 100%;
+      }
     }
 
     &.submit {
